@@ -1,6 +1,8 @@
 Revision history for Fatal
 
 1.10_05
+	* Kludgy support for Perl 5.8 using Scope::Guard and dark
+	  and terrible magicks taken from namespace::clean.
 
 1.10_04 Sat Jun 14 15:02:17 AUSEST 2008
 	* Made all $VERSION numbers more friendly to static code
